Flashlight - Added Flashlight

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,6 @@ Game-Production-Final-Project/Library/
 Game-Production-Final-Project/Assets/VR-Game-Jam-Template-main/Assets/Audio/Kenney Audio/kenney_ui-audio/Visit Patreon.url.meta
 Game-Production-Final-Project/Assets/VR-Game-Jam-Template-main/
 Assets/VR-Game-Jam-Template-main/Assets/XRI_Examples/
+Activity-3-Among-Us/Library/PackageCache/com.unity.timeline@1.7.5/Samples~/GameplaySequenceDemo/Animation/zJog_SM.controller
+Activity-3-Among-Us/Library/
+Activity-3-Among-Us/
